# curlpy

./: LICENSE  README.md  pyproject.toml
src/curlpy/: __main__.py  cli.py  models.py  parser.py  request.py
tests/: test_parser.py  test_request.py
