[project]
name = "curlpy_nicolaszmarzagao"
version = "0.1.1"
authors = [
    { name="Nicolas Z Marzagão", email="nicolas.marzagao@gmail.com"},
]
description = "A simple curl clone in Python"
requires-python = ">=3.10"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.scripts]
curlpy = "curlpy.cli:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/nicolaszmarzagao/curlpy"
Issues = "https://github.com/nicolaszmarzagao/curlpy/issues"
